Main container overflow fixed

--- a/src/sass/components/dropdown.scss
+++ b/src/sass/components/dropdown.scss
@@ -62,5 +62,5 @@
   }
   
   .select-items div:hover, .same-as-selected {
-    background-color: $bg-secondary-color;
+    background-color: $primary;
   }
